510-labs/030-dr-reverseword/kubernetes/manifest/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    acm: acm-dr-reverseword
    app: reverseword
  name: reverseword
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: http
    name: http
  selector:
    app: reverseword
#  type: LoadBalancer
