510-labs/030-dr-reverseword/kubernetes/manifest/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    acm: acm-dr-reverseword
    app: reverseword
  name: reverseword
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: reverseword
